Employee service code

--- a/OnlineBankingSite/src/main/resources/application.properties
+++ b/OnlineBankingSite/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12603250
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=sql12603250
+spring.datasource.password=B8iQgmM8X3
+spring.jpa.hibernate.ddl-auto = update
