--- a/OnlineBankingSite/pom.xml
+++ b/OnlineBankingSite/pom.xml
@@ -62,7 +62,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
+		<!--	<plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
 				<version>1.12.1</version>
@@ -122,7 +122,7 @@
 							</goals>
 						</execution>
 					</executions>
-			</plugin>
+			</plugin>-->
 		</plugins>
 	</build>
 
